--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -80460,3 +80460,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 ._vxvq8x {
     align-items: flex-end !important;
 }
+
+._1gglzn7 {
+    margin-bottom: 16px !important;
+}
